--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-sslify": "^1.2.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
+    "@types/express-sslify": "^1.2.1",
     "@types/node": "^14.0.14",
     "nodemon": "^2.0.4"
   },
